# abcreate

./: .gitignore  CONTRIBUTING.md  README.md  abcreate.py  bundle.xml  pyproject.toml
.github/workflows/: build.yml
abcreate/: configuration.py
abcreate/bundle/: binary.py  bundle.py  icon.py  plist.py
examples/: inkscape.xml  meld.xml
src/abcreate/: __init__.py  configuration.py
src/abcreate/bundle/: __init__.py  binary.py  bundle.py  executable.py  executables.py  framework.py  frameworks.py  gir.py  icon.py  icons.py  libraries.py  library.py  linkedobject.py  locale.py  locales.py  plist.py  resource.py  resources.py
src/abcreate/bundle/gtk/: __init__.py  gdkpixbuf.py  gir.py  glib.py  gtk3.py  gtk4.py
src/abcreate/util/: linkedobject.py  log.py
